--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,31 @@ a {
     background-repeat: no-repeat;
 }
 
+/* Animated Gradient Canvas */
+.gradient-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: 1;
+}
+
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.5) 100%
+    );
+    z-index: 2;
+}
+
 .wave-gradient {
     position: absolute;
     top: 0;
@@ -331,6 +356,7 @@ a {
     min-width: 1440px;
     height: 100%;
     opacity: 0.6;
+    z-index: 3;
 }
 
 .wave {
